--- a/plugins/ai2/beaker/olmo2-7b.yaml
+++ b/plugins/ai2/beaker/olmo2-7b.yaml
@@ -2,35 +2,17 @@ version: v2
 budget: ai2/oe-adapt
 description: "VLLM Server for OLMo-2-1124-7B-Instruct"
 tasks:
-  - name: "host-vllm"
+  - name: "vllm-inference"
     image:
       beaker: ai2/pytorch2.0.0-cuda11.8-python3.10
     command: ["/bin/sh", "-c"]
     arguments:
-      [
-        "pip install vllm && ray start --head --port=8888 && vllm serve /weka/oe-adapt-default/ljm/models/OLMo-2-1124-7B-Instruct --tensor-parallel-size 2 --pipeline-parallel-size 2 --max-model-len 4096 --trust-remote-code --enforce-eager",
-      ]
+      - "[ ${BEAKER_REPLICA_RANK} -eq 0 ] && pip install vllm && ray start --head --port=8888 && vllm serve /weka/oe-adapt-default/ljm/models/allenai___OLMo-2-1124-7B-Instruct --tensor-parallel-size 2 --pipeline-parallel-size 2 --max-model-len 4096 --trust-remote-code --enforce-eager || (pip install vllm && ray start --address=${BEAKER_LEADER_REPLICA_HOSTNAME}:8888 --block)"
     hostNetworking: true
-    datasets:
-      - mountPath: /weka/oe-adapt-default
-        source:
-          weka: oe-adapt-default
-    constraints:
-      cluster:
-        - ai2/jupiter-cirrascale-2
-    resources:
-      gpuCount: 2
-    context:
-      priority: urgent
-  - name: "worker-vllm"
-    image:
-      beaker: ai2/pytorch2.0.0-cuda11.8-python3.10
-    command: ["/bin/sh", "-c"]
-    arguments:
-      [
-        "pip install vllm && ray start --address=${BEAKER_LEADER_REPLICA_HOSTNAME}:8888 --block",
-      ]
-    hostNetworking: true
+    leaderSelection: true
+    propagateFailure: true
+    propagatePreemption: true
+    replicas: 2
     datasets:
       - mountPath: /weka/oe-adapt-default
         source:
