--- a/pyproject.toml
+++ b/pyproject.toml
@@ -86,8 +86,10 @@ modelgauge_google = {version = "*", optional = true}
 modelgauge_vertexai = {version = "*", optional = true}
 modelgauge_mistral = {version = "*", optional = true}
 modelgauge_amazon = {version = "*", optional = true}
+modelgauge_ai2 = {version = "*", optional = true}
 
 [tool.poetry.group.dev.dependencies]
+modelgauge_ai2 = {path = "plugins/ai2", develop = true, optional = true}
 modelgauge_anthropic = {path = "plugins/anthropic", develop = true, optional=true}
 modelgauge_azure = {path = "plugins/azure", develop = true, optional=true}
 modelgauge_demo_plugin = {path = "demo_plugin", develop = true, optional=false}
@@ -112,6 +114,7 @@ types-beautifulsoup4 = "^4.12.0.20240229"
 httpx = ">=0.27.2,<0.29.0"
 
 [tool.poetry.extras]
+ai2 = ["modelgauge_ai2"]
 anthropic = ["modelgauge_anthropic"]
 azure = ["modelgauge_azure"]
 demo = ["modelgauge_demo_plugin"]
@@ -123,7 +126,7 @@ google = ["modelgauge_google"]
 vertexai = ["modelgauge_vertexai"]
 mistral = ["modelgauge_mistral"]
 amazon = ["modelgauge_amazon"]
-all_plugins = ["modelgauge_anthropic", "modelgauge_azure", "modelgauge_demo_plugin", "modelgauge_nvidia", "modelgauge_openai", "modelgauge_perspective_api", "modelgauge_huggingface", "modelgauge_google", "modelgauge_vertexai", "modelgauge_mistral", "modelgauge_amazon"]
+all_plugins = ["modelgauge_ai2", "modelgauge_anthropic", "modelgauge_azure", "modelgauge_demo_plugin", "modelgauge_nvidia", "modelgauge_openai", "modelgauge_perspective_api", "modelgauge_huggingface", "modelgauge_google", "modelgauge_vertexai", "modelgauge_mistral", "modelgauge_amazon"]
 
 [tool.poetry.scripts]
 modelbench = "modelbench.run:cli"
